Bug 105385 Cyrus IMAP: Server directory has / appended always Patch description: Make this function more flexible and support other imap servers such as Cyrus and Courier besides UW server r=bienvenu sr=mscott